CHANGES for Netcdf-Java library
Version @VERSION.MINOR@
Build Date = @BUILDTIME@

Changes in version 4.2:
 4: (xx-xx-xx)
  MSGNavigation had major/minor axes reversed
  hdf5, nc3: attributes with no value
  add StereographicAzimuthalProjection, TransverseMercatorProjection elliptical earth (Heiko.Klein@met.no)
  FeatureCollectionConfig.Config: use collection name if it exists
  CollectionSpecParser, FeatureCollectionConfig: trim the spec string
  bugs in CoordinateAxis1D.findCoordElement - remove longitude special case, rely on fixing mononicity.
  VariableDS copy constructor - dont apply scale/offset twice
  Opendap : use HttpClient version 4.
  hdf5: variable length array of strings, not incrementing counter (Steve Sullivan)
  hdf5: bug in CHAR type when compressed (Steve Sullivan)  grib refactor - time intervals
  ToolsUI - IOSP/GRIB2 tab
  Comparators using longs were wrong, eg DiskCache (bug fix from Steve Ansari)
  CF1 use super.getAxisType()
  CF1 break apart convention list
  DODS parser: fix alias command in the DAS
 3:(2010-05-27)
  NetcdfFile.readSection(String) should unescape names
  DODNetcdfDataset.getDetailInfo() shows DAS, DDS.
  CoordinateAxis1D non-monotonic lon coordinates bug
  VariableDS() constructor must distinguish between copy() and CoordinateAxis()
  VariableDS.needConvert() for StructureDS.convert()
  VariableDS: hasCachedDataRecurse() checks orgVar.hasCachedData(), used by FmrcDataset
  clean up VariableDS cache checking
  AWIPS CoordSysBuilder improvements
  H5header: workaround for natts > 8 hdf5 bug
  N3header: deal with possible vsize overflow.
  FMRC xml cache lastModified needs to ignore msecs.
  GridDatatype was adding duplicate time dimension when had coordsys runtime(time), time(time) eg FMRC best
  CF 1.5 point obs fixes
  remove dependency on gnu-regexp
 2: (2010-05-04)
  ThreddsDataFactory does not open NetcdfDataset in enhance mode.
  use opendap-2.2.jar (new parser)