@@ -49,9 +49,9 @@ public class TestReadandCountGrib extends TestCase {
 
     // our grib reader
     doOne("grib1/data/","cfs.wmo", 51, 4, 6, 3);
-    doOne("grib1/data/","eta218.grb", 14, 5, 7, 4);
+    doOne("grib1/data/","eta218.grb", 14, 6, 8, 4);
     doOne("grib1/data/","extended.wmo", 8, 6, 10, 4);
-    doOne("grib1/data/","ensemble.wmo", 24, 16, 18, 10);
+    doOne("grib1/data/","ensemble.wmo", 24, 16, 20, 10);
     // doOne("grib1/data/","ecmf.wmo", 56, 44, 116, 58);
     doOne("grib1/data/","don_ETA.wmo", 28, 11, 13, 8);
     doOne("grib1/data/","pgbanl.fnl", 76, 15, 17, 14);
@@ -59,21 +59,21 @@ public class TestReadandCountGrib extends TestCase {
     doOne("grib1/data/","radar_national.grib", 1, 1, 3, 0);
     //doOne("grib1/data/","thin.wmo", 240, 87, 117, 63);
     //doOne("grib1/data/","ukm.wmo", 96, 49, 68, 32);
-    doOne("grib1/data/","AVN.wmo", 22, 9, 11, 7);
+    doOne("grib1/data/","AVN.wmo", 22, 10, 12, 7);
     doOne("grib1/data/","AVN-I.wmo", 20, 8, 10, 7); //
     doOne("grib1/data/","MRF.wmo", 15, 8, 10, 6); //
     doOne("grib1/data/","OCEAN.wmo", 4, 4, 12, 0);
     doOne("grib1/data/","RUC.wmo", 27, 7, 10, 5);
     doOne("grib1/data/","RUC2.wmo", 44, 10, 13, 5);
     doOne("grib1/data/","WAVE.wmo", 28, 12, 24, 4); //
-    doOne("grib2/data/","eta2.wmo", 35, 8, 10, 7);
+    doOne("grib2/data/","eta2.wmo", 35, 9, 11, 7);
     doOne("grib2/data/","ndfd.wmo", 1, 1, 3, 0); //
     //doOne("grib2/data/","eta218.wmo", 57, 13, 29, 20); // multiple horiz coords == groups
     doOne("grib2/data/","PMSL_000", 1, 1, 3, 0);
     doOne("grib2/data/","CLDGRIB2.2005040905", 5, 1, 3, 0);
     doOne("grib2/data/","LMPEF_CLM_050518_1200.grb", 1, 1, 3, 0);
     doOne("grib2/data/","AVOR_000.grb", 1, 2, 4, 1); //
-    doOne("grib2/data/","AVN.5deg.wmo", 117, 13, 15, 12);  // */
+    doOne("grib2/data/","AVN.5deg.wmo", 117, 15, 16, 12);  // */
     //TestReadandCount.doOne(TestAll.testdataDir+"ncml/nc/narr/", "narr-a_221_20070411_0600_000.grb", 48, 13, 15, 12);
   }
 
